crates/neenee-tui-view/src/render/snapshots/neenee_tui_view__render__snapshot_tests__edit_file_diff_renders_from_structured_patch.snap
---
source: crates/neenee-tui-view/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 30)"
---
- Edit a.rs +1 -1 · 0ms
   1   - let x = 1;
      1+ let x = 2;

backgrounds:
A=#070808  B=#201414  C=#402828  D=#121F16  E=#2A4030  .=reset
0: A80
1: B17 C2 B61
2: D17 E2 D61
