crates/neenee-tui-view/src/render/snapshots/neenee_tui_view__render__snapshot_tests__edit_file_expanded_renders_diff.snap
---
source: crates/neenee-tui-view/src/render/snapshot_tests.rs
assertion_line: 368
expression: "render_grid(&m, 80, 30)"
---
- Edit a.rs +1 -1
         @@ -1 +1 @@
   1   - let x = 1;
      1+ let x = 2;

backgrounds:
A=#070808  B=#111312  C=#201414  D=#402828  E=#121F16  F=#2A4030  .=reset
0: A80
1: B80
2: C17 D2 C61
3: E17 F2 E61
