crates/neenee-tui-view/src/render/snapshots/neenee_tui_view__render__snapshot_tests__grep_expanded_renders_grouped_matches.snap
---
source: crates/neenee-tui-view/src/render/snapshot_tests.rs
expression: "render_grid(&m, 80, 40)"
---
- Grep "foo" in src
  src/a.rs
  10  let foo = 1;
  22  foo();
  src/b.rs
   5  foo,

backgrounds:
A=#070808  B=#111312  .=reset
0: A80
1: B80
2: B80
3: B80
4: B80
5: B80
